# ssc0712_t1

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: controller_config.yaml
description/: robot.urdf.xacro
launch/: carrega_robo.launch.py  editar_mundo.launch.py  inicia_simulacao.launch.py  start_mission.launch.py  teste_urdf.launch.py  turtlesim_mimic.launch.py
models/ObstaculosArenaV1/: model.config  model.sdf
models/ObstaculosCilindricos/: model.config  model.sdf  objetos_cilindrocos.xacro.sdf
models/Paredes/: model.config  model.sdf  paredes.xacro.sdf
models/TurtlebotArena/: model.sdf
rviz/: rviz_config.rviz  urdf.rviz
ssc0712_t1/: controle_robo.py  controle_tartaruga.py  flag_detector.py  ground_truth_odometry.py  mission_control.py  robo_mapper.py
world/: arena.sdf  arena_cilindros.sdf  arena_cilindros.sdf.xacro  arena_classic.sdf  arena_paredes.sdf  arena_paredes.sdf.xacro  empty.sdf  empty.world  empty_arena.sdf  empty_arena.sdf.xacro  empty_arena.world  spherical_coordinates.sdf
